--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,27 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "ts-node-dev index.ts",
+    "build": "tsc",
+    "start": "node dist"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.19"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.7.14",
+    "ts-node-dev": "^2.0.0"
   }
 }
