--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev index.ts",
-    "build": "tsc",
-    "start": "node dist"
+    "start": "ts-node ./src/index.ts",
+    "build": "rimraf ./dist && tsc",
+    "dev": "npx nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +15,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "mongoose": "^6.5.4",
+    "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.7.14",
     "ts-node-dev": "^2.0.0"
   }
