--- a/backend/package.json
+++ b/backend/package.json
@@ -13,14 +13,18 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "@types/sharp": "^0.30.5",
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.31.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
+    "sharp": "^0.31.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   },
@@ -30,6 +34,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.7.14",
     "ts-node-dev": "^2.0.0"
   }
