--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "@types/bad-words": "^3.0.1",
     "@types/sharp": "^0.30.5",
+    "bad-words": "^3.0.4",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.31.0",
     "cors": "^2.8.5",
