Added removing image, creating and fetching post functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["CLOUDARY", "middlewares"]
+  "cSpell.words": [
+    "abdulsagheeras",
+    "CLOUDARY",
+    "Cloudinary",
+    "middlewares",
+    "sendgrid",
+    "unfollow",
+    "unfollowed",
+    "virtuals"
+  ]
 }
