--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.3.0",
+    "@heroicons/react": "^1.0.3",
     "@reduxjs/toolkit": "^1.8.5",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
@@ -12,13 +15,18 @@
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^9.0.0",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "heroicons-react": "^1.4.1",
+    "postcss": "^8.0.0",
+    "postcss-preset-env": "^7.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
@@ -48,8 +56,6 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.9",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "postcss-flexbugs-fixes": "^5.0.2"
   }
 }
